--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,9 +8,7 @@ author_profile: true
 <!--{% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}-->
-<div class="wordwrap">
-Here are lists of my papers:
-</div>
+<h2> Full list </h2><hr />
 <ul>
 	<li>
 		<a href="https://arxiv.org/search/?searchtype=author&query=Delos%2C+M+S">arXiv preprints</a>
@@ -31,6 +29,8 @@ Here are lists of my papers:
 </ul> 
 
 {% include base_path %}
+
+<!-- <h1> Key papers </h1> -->
 
 <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
